@@ -1,4 +1,5 @@
 Development
+	Accelerators Ctrl-P (Preferences) and Ctrl-L (Playlist)
 	Hide Playlist when fullscreen is selected
 	Change Properties to Preferences
 	Removal of dependancies on libgnome and libgnomeui
